add .env in project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=VkBot
-vk.api.token= # вставьте сюда ваш ключ доступа
+vk.api.token=${TOKEN}
 vk.api.version=5.199
 vk.api.url = https://api.vk.com/method/messages.send
 vk.api.url.sendmsg =${vk.api.url}?access_token=${vk.api.token}&v=${vk.api.version}
-vk.api.confirm.code= # вставьте сюда проверочный код
+vk.api.confirm.code=${CONFIRM_CODE}
 server.port=8080
